--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "13.5.5"
+    "eslint-config-next": "13.5.5",
+    "@twilio-paste/core": "^17.0.1",
+    "@twilio-paste/icons": "^9.4.2"
   }
 }
